err/ogrtools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ogr_cli'...
Compiling './lib/python3.5/site-packages/ogr_cli/ogr.py'...
***   File "./lib/python3.5/site-packages/ogr_cli/ogr.py", line 13
    print ogrinfo(readonly=True, summaryonly=True, all_layers=True,
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ogrtools'...
Listing './lib/python3.5/site-packages/ogrtools/interlis'...
Compiling './lib/python3.5/site-packages/ogrtools/interlis/ilismeta.py'...
***   File "./lib/python3.5/site-packages/ogrtools/interlis/ilismeta.py", line 198
    print "digraph {"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ogrtools/interlis/model_loader.py'...
***   File "./lib/python3.5/site-packages/ogrtools/interlis/model_loader.py", line 94
    print self.convert_model([ilifn], imd)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ogrtools/ogrtransform'...
Listing './lib/python3.5/site-packages/ogrtools/pyogr'...
Listing './lib/python3.5/site-packages/ogrtools-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
